compilation_errors.txt
> Task :generateEffectiveLombokConfig UP-TO-DATE

> Task :compileJava FAILED
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/service/KnowledgeSeederServiceEnhanced.java:132: error: incompatible types: Date cannot be converted to LocalDateTime
        learning.setCreatedAt(new Date());
                              ^
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/service/KnowledgeSeederServiceEnhanced.java:133: error: incompatible types: Date cannot be converted to LocalDateTime
        learning.setUpdatedAt(new Date());
                              ^
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/service/KnowledgeSeederServiceEnhanced.java:135: error: incompatible types: Date cannot be converted to LocalDateTime
        learning.setLastUsed(new Date());
                             ^
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/service/KnowledgeSeederServiceEnhanced.java:162: error: incompatible types: Date cannot be converted to LocalDateTime
                learning.setLastUsed(new Date());
                                     ^
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/service/KnowledgeSeederServiceEnhanced.java:185: error: incompatible types: Date cannot be converted to LocalDateTime
                learning.setUpdatedAt(new Date());
                                      ^
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/service/KnowledgeSeederServiceEnhanced.java:260: error: cannot find symbol
                    long diffInMillis = now.getTime() - learning.getLastUsed().getTime();
                                                                              ^
  symbol:   method getTime()
  location: class LocalDateTime
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/service/KnowledgeSeederServiceEnhanced.java:405: error: incompatible types: Date cannot be converted to LocalDateTime
        learning.setCreatedAt(new Date());
                              ^
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/service/KnowledgeSeederServiceEnhanced.java:406: error: incompatible types: Date cannot be converted to LocalDateTime
        learning.setUpdatedAt(new Date());
                              ^
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/service/SelfImprovementService.java:68: error: cannot find symbol
                .filter(entry -> entry.getLearnedAt() != null && entry.getLearnedAt().after(intervalAgoDate))
                                                                                     ^
  symbol:   method after(Date)
  location: class LocalDateTime
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/service/SelfImprovementService.java:110: error: incompatible types: Date cannot be converted to LocalDateTime
            learning.setLearnedAt(new java.util.Date());
                                  ^
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/admin/ProviderAdminService.java:292: error: incompatible types: Date cannot be converted to LocalDateTime
        logRecord.setTimestamp(new Date());
                               ^
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/controller/LearningIngestController.java:110: error: incompatible types: Date cannot be converted to LocalDateTime
            pattern.setLearnedAt(new java.util.Date());
                                 ^
Note: /home/nazifarabbu/supremeai/src/main/java/com/supremeai/controller/LearningAdminController.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
12 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 6s
2 actionable tasks: 1 executed, 1 up-to-date
